--- a/readme
+++ b/readme
@@ -45,4 +45,4 @@ After the pandemic, many people are eager to reconnect with the outside world. S
 Conclusion
 The rise of Sprunki Phases is more than just a passing trend; it reflects the essence of modern social media culture. In this fast-paced world that values visual impact and interaction, Sprunki Phases provides a platform for people to unleash their creativity and express themselves. If you haven't tried it yet, why not join the trend now? Let your creativity shine and light up your social media feeds!
 
-👉 Try out Sprunki Phase now: sprunki-phase-game.com
+👉 Try out Sprunki Phase now: https://sprunki-phase-game.com/
